--- a/mavt91/app/templates/mapping/base.html
+++ b/mavt91/app/templates/mapping/base.html
@@ -25,8 +25,9 @@
             <p class="line_text_base">Здравствуйте! </p>
             <p class="line_text_base">Вы находитесь на главное странице сайта тестового задания для группы компаний Ask42.</p>
             <p class="line_text_base">В данном проекте реализованно FrontEnd часть по средствам HTML, CSS и JavaScript(Leaflet).</p>
-            <p class="line_text_base">BackEnd часть предствлена языком Python 3 на основе фреймворка Django.</p>
-            <p class="line_text_base">Цель проекта состоит в записи координат, указанных точек в бызу данных (PostgeSQL) и ихвыводе.</p>
+            <p class="line_text_base">BackEnd часть представлена языком Python 3 на основе фреймворка Django.</p>
+            <p class="line_text_base">Цель проекта состоит в записи координат, указанных точек в базу данных
+                (PostgeSQL) и их выводе.</p>
             <p class="line_text_base">Во FrontEnd часть по средствам Ajax запроса осуществляется передача данных на сервер Django.</p>
             <p class="line_text_base">На серверной части - данные заносятся в базу данных и извлекаются для отображения.</p>
         </div>
